# vectorized-gaussian-renderer-public

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  BENCHMARK_PROTOCOL.md  BOTTLENECK_REPORT.md  DECISIONS.md  EXPERIMENT_LEDGER.md  GAUSSIAN_LIDAR.md  GOALS.md  HYBRID_PHYSICS.md  KERNEL_ARCHITECTURE.md  LIDAR_EVIDENCE.md  PROFILE_REPORT.md  PUBLICATION_READINESS.md  README.md  RESULTS.md  TASKS.md  THIRD_PARTY_NOTICES.md  VERIFICATION_PLAN.md  post.md  pyproject.toml  todo.md
apps/: vgr.graphical_test.kit
benchmarks/: audit_acceptance.py  audit_flashgs_paper_reproduction.py  audit_ovrtx_projection_modes.py  audit_trajectory_artifacts.py  batch_scaling_l4_results_2026-07-17.json  batched_render.py  build_robotics_batch_contract.py  changing_camera_l4_results_2026-07-17.json  compare_custom_gsplat.py  compare_fidelity.py  compare_flashgs_b64_repair_oracle.py  compare_flashgs_matched_fidelity.py  compare_ovrtx_custom_matrix.py  compare_trajectory.py  cub_double_buffer_l40s_results_2026-07-17.json  debug_flashgs_pipeline.py  dynamic_camera_l4_assessment_2026-07-20.json  emitted_memory_l4_results_2026-07-17.json  first_pass_projection_reuse_l4_results_2026-07-18.json  flashgs_matched_memory.py  flashgs_matched_occupancy.py  generate_flashgs_dynamic_contract.py  hybrid_compositor_l4_results_2026-07-20.json  index_flashgs_b64_diagnosis.py  merge_ovrtx_matrices.py  ovrtx_projection_activation_l4_results_2026-07-20.json  package_trajectory_video.py  phase_scratch_alias_l4_results_2026-07-17.json  pr68_independent_l4_validation_2026-07-21.json  profile_custom.py  profile_gsplat.py  renderer_options.py  rtx_compositing_validation_4090_results_2026-07-20.json  run_baselines.py  run_custom.py  run_customer_stress_matrix.py  run_flashgs_gsplat_oracle.py  run_flashgs_matched.py  run_flashgs_matched_matrix.py  run_g1_hybrid_multirobot.py  (+27 more)
cloudflare/: r2-assets-garage-high-detail.json  r2-assets.json  r2-cors.json
datasets/: construction-next-day.manifest.json  garage-high-detail.manifest.json  home-scan-lod0.manifest.json  (+2 more)
(+365 files in other folders)
